--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "easy-parcel",
   "version": "1.0.0",
-  "description": "",
+  "description": "parcel parcel",
   "main": "index.js",
   "dependencies": {
     "parcel-bundler": "^1.5.1"
@@ -16,7 +16,7 @@
     "url": "git+https://github.com/liziwangrui/easy-parcel.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "wangrui",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/liziwangrui/easy-parcel/issues"
