--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "node-sass": "^4.7.2",
     "parcel-bundler": "^1.5.1"
   },
   "devDependencies": {},
